--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "init",
+  "name": "trn-init",
   "version": "1.0.0",
   "main": "main.js",
   "types": "main.ts",
@@ -22,7 +22,8 @@
   "dependencies": {
     "@cdktf/provider-github": "12.0.2",
     "cdktf": "^0.19.1",
-    "constructs": "^10.3.0"
+    "constructs": "^10.3.0",
+    "trn-components": "file:../components"
   },
   "devDependencies": {
     "@types/jest": "^29.5.10",
